--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "hpp": "^0.2.3",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
   }
 }
